Add Paginiation to search results to allow for infinity scroll in search mode
